--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_best"
+            imageUrl="@{BestProductModel.imageUrl}"
             app:layout_constraintEnd_toStartOf="@id/iv_best_image_2"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +37,7 @@
             android:background="@drawable/rectanglewithcorner"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:text="1"
+            android:text="@{BestProductModel.rank}"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.caption01"
             android:textColor="@color/white"
@@ -51,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
-            android:text="Q4 유로탑 롤팩 매트리..."
+            android:text="@string/string_best_product_description"
             android:textAppearance="@style/TextAppearance.miniCaption02"
             app:layout_constraintBottom_toTopOf="@id/layout_1"
             app:layout_constraintStart_toStartOf="@id/iv_best_image_1"
@@ -72,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="56%"
+                android:text="@{BestProductModel.discount.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -83,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="34,900"
+                android:text="@{BestProductModel.price.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
@@ -95,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_best"
+            imageUrl="@{BestProductModel.imageUrl}"
             app:layout_constraintEnd_toStartOf="@id/iv_best_image_3"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/iv_best_image_1"
@@ -126,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
-            android:text="Q4 유로탑 롤팩 매트리..."
+            android:text="@string/string_best_product_description"
             android:textAppearance="@style/TextAppearance.miniCaption02"
             app:layout_constraintBottom_toTopOf="@id/layout_2"
             app:layout_constraintStart_toStartOf="@id/iv_best_image_2"
@@ -147,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="56%"
+                android:text="@{BestProductModel.discount.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -158,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="34,900"
+                android:text="@{BestProductModel.price.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
@@ -169,7 +170,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_best"
+            imageUrl="@{BestProductModel.imageUrl}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/iv_best_image_2"
@@ -201,7 +202,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
-            android:text="Q4 유로탑 롤팩 매트리..."
+            android:text="@string/string_best_product_description"
             android:textAppearance="@style/TextAppearance.miniCaption02"
             app:layout_constraintBottom_toTopOf="@id/layout_3"
             app:layout_constraintStart_toStartOf="@id/iv_best_image_3"
@@ -222,7 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="56%"
+                android:text="@{BestProductModel.discount.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -233,7 +234,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="34,900"
+                android:text="@{BestProductModel.price.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
